fix: z-index issue

--- a/webapp/src/app/burger/burger.component.scss
+++ b/webapp/src/app/burger/burger.component.scss
@@ -6,7 +6,7 @@
     height: 100vh;
     background-color: $white-main;
     position: fixed;
-    z-index: 99999;
+    z-index: 999999;
     transform: translateX(-100%);
     transition: transform 0.4s ease-out;
 
